<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2019 Martin Kvarnström

  This file is part of MeasureTempo.

  MeasureTempo is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  MeasureTempo is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MeasureTempo.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 >
   <group android:id="@+id/menu_selectionmode">
      <item android:id="@+id/mnuCreateSectionManually"
       android:icon="@drawable/ic_24_add_section"
       android:orderInCategory="10"
       android:title="@string/mnuCreateSectionManually"
       /><!--       app:showAsAction="always"-->
      <item android:id="@+id/mnuSetSectionTempo"
       android:icon="@mipmap/ic_set_exact_tempo"
       android:orderInCategory="13"
       android:title="@string/mnuSetSectionTempo"
       app:showAsAction="never"
       />
      <item android:id="@+id/mnuMoveSections"
       android:icon="@drawable/ic_24_sel_move_sections"
       android:orderInCategory="20"
       android:title="@string/mnuMoveSections"
       /><!--       app:showAsAction="ifRoom"-->
      <item android:id="@+id/mnuCombineSections"
       android:icon="@drawable/ic_24_sel_combine_sections"
       android:orderInCategory="30"
       android:title="@string/mnuCombineSections"
       /><!--       app:showAsAction="ifRoom"-->
      <item android:id="@+id/mnuSplitSection"
       android:icon="@drawable/ic_24_sel_split_section"
       android:orderInCategory="40"
       android:title="@string/mnuSplitSection"
       /><!--       app:showAsAction="ifRoom"-->
      <item android:id="@+id/mnuDeleteSections"
       android:icon="@drawable/ic_24_sel_delete"
       android:orderInCategory="50"
       android:title="@string/mnuDeleteSections"
       /><!--       app:showAsAction="ifRoom"-->
   </group>
   <group android:id="@+id/menu_tempo_view"
    android:checkableBehavior="single"
    android:orderInCategory="80"
    >
      <item android:id="@+id/mnuViewHorizontal"
       android:icon="@drawable/ic_24_view_horizontal"
       android:title="@string/mnuViewHorizontal"
       app:showAsAction="never"
       />
      <item android:id="@+id/mnuViewVertical"
       android:checked="true"
       android:icon="@drawable/ic_24_view_vertical"
       android:title="@string/mnuViewVertical"
       app:showAsAction="never"
       />
   </group>
</menu>