<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2019 Martin Kvarnström

  This file is part of MeasureTempo.

  MeasureTempo is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  MeasureTempo is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with MeasureTempo.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
 tools:context=".ui.FragTempo"
 tools:ignore="ButtonStyle"
 >
   <!--android:layout_marginTop="@dimen/activity_vertical_margin"
android:layout_marginLeft="@dimen/activity_horizontal_margin"
android:layout_marginRight="@dimen/activity_horizontal_margin"-->
   <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/txtTitleSongFilename"
    android:singleLine="true"
    android:scrollHorizontally="true"
    android:ellipsize="middle"
    />
   <mat.measuretempo.ui.SongView
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimenCombinedHeight"
    android:background="@android:color/holo_orange_light"
    android:id="@+id/horizontalView"
    android:visibility="gone"
    />

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/pausedView"
    >
      <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/txtSongDuration"
       android:typeface="monospace"
       />
      <androidx.appcompat.widget.AppCompatSeekBar
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/songSeekbar"
       />
   </LinearLayout>

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/recordingView"
    android:orientation="horizontal"
    android:visibility="gone"
    tools:visibility="visible"
    >
      <Button
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:paddingVertical="@dimen/btn_big_padding"
       android:drawablePadding="@dimen/btn_drawable_padding"
       android:drawableTop="@drawable/ic_24_record_add_section_beat"
       android:text="@string/btnBeat"
       android:id="@+id/btnBeat"
       />
      <Button
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:paddingVertical="@dimen/btn_big_padding"
       android:drawablePadding="@dimen/btn_drawable_padding"
       android:drawableTop="@drawable/ic_24_record_add_measure"
       android:text="@string/btnMeasure"
       android:id="@+id/btnMeasure"
       />
      <Button
       android:layout_width="0dp"
       android:layout_height="match_parent"
       android:layout_weight="0.75"
       android:paddingVertical="@dimen/btn_big_padding"
       android:drawablePadding="@dimen/btn_drawable_padding"
       android:drawableTop="@drawable/ic_24_record_pause"
       android:text="@string/btnPause"
       android:id="@+id/btnPause"
       />
   </LinearLayout>

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/selectionView"
    android:visibility="gone"
    android:orientation="vertical"
    tools:visibility="visible"
    >
      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       >
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnSelPrev"
          android:contentDescription="@string/btnSelPrev"
          android:src="@drawable/ic_16_sel_prev"
          />
         <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/txtSelTitle"
          android:layout_weight="1"
          />
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnSelNext"
          android:contentDescription="@string/btnSelNext"
          android:src="@drawable/ic_16_sel_next"
          />
      </LinearLayout>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       android:id="@+id/selMeasuresView"
       >
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnSetSectionMeasures"
          android:contentDescription="@string/btnSetSectionMeasures"
          android:src="@drawable/ic_24_sel_set_measures"
          />
         <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/txtSelMeasures"
          android:layout_weight="1"
          />
      </LinearLayout>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       android:id="@+id/selTimesigTempoView"
       >
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnSetSectionsTimesig"
          android:contentDescription="@string/btnSetSectionsTimesig"
          android:src="@drawable/ic_24_sel_set_time_signature"
          />
         <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/txtSelTimesigTempo"
          android:layout_weight="1"
          />
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnSetTempoChange"
          android:contentDescription="@string/btnSetTempoChange"
          android:src="@drawable/ic_24_sel_set_tempo_change"
          />
      </LinearLayout>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       android:id="@+id/selDurationView"
       >
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnChangeSectionStart"
          android:contentDescription="@string/btnChangeSectionStart"
          android:src="@drawable/ic_24_sel_move_section_start"
          />
         <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/txtSelDuration"
          android:layout_weight="1"
          />
         <ImageButton
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnChangeSectionEnd"
          android:contentDescription="@string/btnChangeSectionEnd"
          android:src="@drawable/ic_24_sel_move_section_end"
          />
      </LinearLayout>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
         <androidx.appcompat.widget.AppCompatSpinner
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/spinnerSMT"
          />
         <androidx.appcompat.widget.AppCompatSpinner
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/spinnerML"
          />
         <androidx.appcompat.widget.AppCompatSpinner
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/spinnerTempoChange"
          />
         <EditText
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="numberDecimal"
          android:id="@+id/editTempo"
          android:importantForAutofill="no"
          android:hint="@string/editTempoHint"
          />
      </LinearLayout>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       >
         <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/txtSplit1"
          tools:text="1"
          />
         <androidx.appcompat.widget.AppCompatSeekBar
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/svSeekbar"
          android:layout_weight="1"
          />
         <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/txtSplit2"
          tools:text="1"
          />
      </LinearLayout>

      <mat.measuretempo.imported.shawnlin.numberpicker.NumberPicker
       android:id="@+id/numberPicker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:np_dividerColor="?colorAccent"
       app:np_textColor="?colorPrimary"
       app:np_selectedTextColor="?colorAccent"
       app:np_textSize="@dimen/dimenPickerText"
       app:np_selectedTextSize="@dimen/dimenPickerSelectedText"
       app:np_orientation="horizontal"
       />
      <mat.measuretempo.imported.shawnlin.numberpicker.NumberPicker
       android:id="@+id/notePicker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:np_selectedTextColor="?colorAccent"
       app:np_textSize="@dimen/dimenPickerText"
       app:np_selectedTextSize="@dimen/dimenPickerSelectedText"
       app:np_orientation="horizontal"
       />

      <HorizontalScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
         <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:id="@+id/beatsView"
          />
      </HorizontalScrollView>

      <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:gravity="center_vertical|right"
       android:id="@+id/okCancelView"
       >
         <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:id="@+id/txtCancel"
          />
         <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnCancel"
          android:text="@android:string/cancel"
          tools:ignore="ButtonOrder"
          />
         <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/btnOK"
          android:text="@android:string/ok"
          />
      </LinearLayout>
   </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:id="@+id/verticalView"
    />
</LinearLayout>